--- a/package.xml
+++ b/package.xml
@@ -42,6 +42,14 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rviz</build_depend>
   <run_depend>rviz</run_depend>
+  <build_depend>move_base_msgs</build_depend>
+  <run_depend>move_base_msgs</run_depend>
+  <build_depend>actionlib_msgs</build_depend>
+  <run_depend>actionlib_msgs</run_depend>
+  <build_depend>actionlib</build_depend>
+  <run_depend>actionlib</run_depend>
+  <build_depend>frontier_exploration_msgs</build_depend>
+  <run_depend>frontier_exploration_msgs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
