--- a/package.xml
+++ b/package.xml
@@ -48,8 +48,8 @@
   <run_depend>actionlib_msgs</run_depend>
   <build_depend>actionlib</build_depend>
   <run_depend>actionlib</run_depend>
-  <build_depend>frontier_exploration_msgs</build_depend>
-  <run_depend>frontier_exploration_msgs</run_depend>
+  <build_depend>frontier_exploration</build_depend>
+  <run_depend>frontier_exploration</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
