--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,11 +169,11 @@ install(FILES
 install(DIRECTORY media/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/media)
 
-install(DIRECTORY icons/
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/icons)
+#install(DIRECTORY icons/
+#  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/icons)
 
-install(PROGRAMS scripts/send_test_msgs.py
-  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+#install(PROGRAMS scripts/send_test_msgs.py
+#  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 #############
 ## Testing ##
