--- a/package.xml
+++ b/package.xml
@@ -50,6 +50,12 @@
   <run_depend>actionlib</run_depend>
   <build_depend>frontier_exploration</build_depend>
   <run_depend>frontier_exploration</run_depend>
+  <build_depend>radbot_control</build_depend>
+  <run_depend>radbot_control</run_depend>
+  <build_depend>std_srvs</build_depend>
+  <run_depend>std_srvs</run_depend>
+  <build_depend>ursa_driver</build_depend>
+  <run_depend>ursa_driver</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
