--- a/package.xml
+++ b/package.xml
@@ -56,6 +56,8 @@
   <run_depend>std_srvs</run_depend>
   <build_depend>ursa_driver</build_depend>
   <run_depend>ursa_driver</run_depend>
+  <build_depend>jackal_msgs</build_depend>
+  <run_depend>jackal_msgs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
