--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,9 +151,13 @@ add_executable(test_planes src/planes2.cpp)
 add_executable(showclouds src/showclouds.cpp)
 add_executable(showcloud src/showcloud.cpp)
 add_executable(cloudloop src/cloudloop.cpp)
+add_executable(searchloop src/searchloop.cpp)
+add_executable(searchall src/searchall.cpp)
 add_executable(segmentation src/segmentation.cpp)
 add_executable(keypoints src/show_keypoints.cpp)
 
+add_dependencies(searchloop ${PROJECT_NAME}_gencfg)
+add_dependencies(searchall ${PROJECT_NAME}_gencfg)
 add_dependencies(cloudloop ${PROJECT_NAME}_gencfg)
 
 ## Declare a cpp library
@@ -183,6 +187,8 @@ target_link_libraries(matching_test  ${catkin_LIBRARIES})
 target_link_libraries(showclouds  ${catkin_LIBRARIES})
 target_link_libraries(showcloud  ${catkin_LIBRARIES})
 target_link_libraries(cloudloop  ${catkin_LIBRARIES})
+target_link_libraries(searchloop  ${catkin_LIBRARIES})
+target_link_libraries(searchall  ${catkin_LIBRARIES})
 target_link_libraries(planes  ${catkin_LIBRARIES})
 target_link_libraries(test_planes  ${catkin_LIBRARIES})
 target_link_libraries(segmentation  ${catkin_LIBRARIES})
